--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <div id="buttons">
+    <button id="input-squares">Change Resolution</button>
+  </div>
   <div class="container"></div>
   <script src="script.js"></script>
 </body>
